remove api key requirements
